--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "gulp-watch": "^4.3.11",
     "jQuery": "^1.7.4",
     "jquery": "^3.1.1",
+    "jquery-ui-browserify": "^1.11.0-pre-seelio",
+    "jsdom": "^9.12.0",
     "knockout": "^3.4.1",
+    "location": "0.0.1",
+    "navigator": "^1.0.1",
     "stylus": "^0.54.5"
   },
   "dependencies": {}
